--- a/account/templates/account/login.html
+++ b/account/templates/account/login.html
@@ -1,10 +1,10 @@
 <h1>login page</h1>
 
-<form action="{% url 'account:authenticate' %}" method="post">
+<form action="{% url 'account:authentication' %}" method="post">
 {% csrf_token %}
     <label>username:</label>
     <input type="text" name="username" id="username"><br>
     <label>password:</label>
-    <input type="password" name ="password" id = "password"><br>
+    <input type="password" name ="pass" id = "password"><br>
     <input type="submit" value="login">
 </form>
