--- a/account/templates/account/login.html
+++ b/account/templates/account/login.html
@@ -1,6 +1,6 @@
 <h1>login page</h1>
 
-<form action="{% url 'account:authentication' %}" method="post">
+<form method="post">
 {% csrf_token %}
     <label>username:</label>
     <input type="text" name="username" id="username"><br>
