UI of login and register pages changed.

--- a/account/templates/account/register.html
+++ b/account/templates/account/register.html
@@ -1,3 +1,5 @@
+{% extends "account/base.html" %}
+{% block content %}
 <h1>Registration</h1>
 
 <form method="post">
@@ -5,3 +7,4 @@
     {{form.as_p}}
     <input type="submit" value="signup">
 </form>
+{% endblock %}
