--- a/account/templates/account/login.html
+++ b/account/templates/account/login.html
@@ -1,10 +1,17 @@
-<h1>login page</h1>
+{% extends "account/base.html" %}
+{% block content %}
 
-<form method="post">
-{% csrf_token %}
-    <label>username:</label>
-    <input type="text" name="username" id="username"><br>
-    <label>password:</label>
-    <input type="password" name ="pass" id = "password"><br>
-    <input type="submit" value="login">
-</form>
+<center>
+    <h1 style="margin-top: 300px">login page</h1>
+    <br />
+    <br />
+    <form method="post">
+        {% csrf_token %}
+        <label>username:</label>
+        <input type="text" name="username" id="username"><br>
+        <label>password:</label>
+        <input type="password" name="pass" id="password"><br>
+        <input type="submit" value="login">
+    </form>
+</center>
+{% endblock %}
