--- a/product/templates/list.html
+++ b/product/templates/list.html
@@ -6,19 +6,29 @@
         <table class="table">
             <thead>
                 <tr>
-                <th>تصویر</th>
-                <th>موجودی</th>
-                <th>قیمت محصول</th>
-                <th>نام محصول</th>
+                    <th scope="col"></th>
+                    <th scope="col"></th>
+                    <th scope="col"></th>
+                    <th scope="col">محصولات</th>
                 </tr>
                 </thead>
             <tbody>
                 {% for p in products %}
                     <tr>
-                    <td><img src="/media/{{ p.photo }}" width="70px" height="70px"></td>
-                    <td>{{ p.is_available }}</td>
-                    <td>ریال {{ p.price }}</td>
-                    <td>{{ p.name }}</td>
+                        <td><img src="/media/{{ p.photo }}" height="100px" width="130px"></td>
+                        <td>
+                                {{ p.manufacture_date }}:تولید<br>
+                                {{ p.expires_at }}:انقضا
+
+                        </td>
+                        <td>
+                            {% if p.is_available %}
+                                <span style="color: green"> {{ p.price }} ریال</span>
+                            {% else %}
+                                <span style="color: red">موجود نیست</span>
+                            {% endif %}
+                        </td>
+                        <td>{{ p.name }}</td>
                     </tr>
                 {% endfor %}
             <tbody>
