--- a/account/templates/account/register.html
+++ b/account/templates/account/register.html
@@ -1,7 +1,7 @@
 {% extends "account/base.html" %}
 {% block content %}
 
-<center><h1 style="margin-bottom: 50px">Registration page</h1></center>
+<center><h1 style="margin-bottom: 50px">Registration</h1></center>
 <div style="margin-left: 30%">
     <form method="post">
         {% csrf_token %}
