--- a/account/templates/account/edit_profile.html
+++ b/account/templates/account/edit_profile.html
@@ -1,36 +1,8 @@
-{% extends "account/base.html" %}
+{% extends "base.html" %}
 {% block content %}
-<style>
-    .container{
-    padding:5%;
-}
-.container .img{
-    text-align:center;
-}
-.container .details{
-    border-left:3px solid #ded4da;
-}
-.container .details p{
-    font-size:15px;
-    font-weight:bold;
-}
-</style>
-<div class="container">
-  <div class="row">
-    <div class="col-md-6 img">
-      <img src="http://www.seowptheme.com/wp-content/uploads/avatar-2-1-300x300.png"  alt="" class="img-rounded">
-    </div>
-    <div class="col-md-6 details">
-      <blockquote>
-        <h5>{{ user.username }}</h5>
-        <small><cite title="Source Title">{{user.account.name}}  <i class="icon-map-marker"></i></cite></small>
-      </blockquote>
-      <p>
-        {{user.email}} <br>
-        {{user.account.phone}} <br>
-        {{ user.account.join_date|date:"D d M Y" }}
-      </p>
-    </div>
-  </div>
-</div>
+<h3>{{ request.user.username }}</h3>
+<form method="post">{% csrf_token %}
+    {{ form.as_p }}
+    <input type="submit" value="Update">
+</form>
 {% endblock %}
