--- a/general/templates/general/about_us.html
+++ b/general/templates/general/about_us.html
@@ -1,6 +1,9 @@
 {% extends 'general/base.html' %}
 
 {% block content %}
-
+    {% for p in x %}
+    {% if not request.user.is_authenticated %}
+        shit
+    {% endif %}
 
 {% endblock %}
