--- a/general/templates/general/base.html
+++ b/general/templates/general/base.html
@@ -24,7 +24,10 @@
                     <a class="nav-link" href="{% url 'product_list' %}">محصولات</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/">خانه</a>
+                    <a class="nav-link" href="{% url 'home' %}">خانه</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'about-us' %}">درباره ما</a>
                 </li>
                 </ul>
             </div>
