--- a/general/templates/general/about_us.html
+++ b/general/templates/general/about_us.html
@@ -1,6 +1,18 @@
 {% extends 'general/base.html' %}
-
+{% load static %}
 {% block content %}
-    shit
+    <center>
+
+    <div class="card" style="width: 18rem;">
+      <img src="{% static 'images/img1.jpg' %}" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">روستانیک</h5>
+        <p class="card-text">روستانیک؛ تولیدکننده و عرضه‌کننده محصولات غذایی سالم
+تلفن: ۰۹۰۳۷۴۰۰۹۴۵ و ۸۸۰۶۷۸۰۵</p>
+        <a href="#" class="btn btn-primary">Go somewhere</a>
+      </div>
+    </div>
+
+    </center>
 
 {% endblock %}
