--- a/general/templates/general/base.html
+++ b/general/templates/general/base.html
@@ -35,10 +35,10 @@
                     </li>
                 {% else %}
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'account:registration' %}">ورود</a>
+                        <a class="nav-link" href="{% url 'account:login' %}">ورود</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'account:login' %}">ثبت نام</a>
+                        <a class="nav-link" href="{% url 'account:registration' %}">ثبت نام</a>
                     </li>
                 {% endif %}
                 </ul>
