--- a/account/templates/account/show_profile.html
+++ b/account/templates/account/show_profile.html
@@ -1,4 +1,4 @@
-{% extends "account/base.html" %}
+{% extends "general/base.html" %}
 {% block content %}
 <style>
     .container{
@@ -18,7 +18,12 @@
 <div class="container">
   <div class="row">
     <div class="col-md-6 img">
-      <img src="http://www.seowptheme.com/wp-content/uploads/avatar-2-1-300x300.png"  alt="" class="img-rounded">
+        {% if not user.account.avatar %}
+            <img src="http://www.seowptheme.com/wp-content/uploads/avatar-2-1-300x300.png"  alt="" class="img-rounded">
+        {% else %}
+        salam
+        {% endif %}
+
     </div>
     <div class="col-md-6 details">
       <blockquote>
@@ -30,6 +35,7 @@
         {{user.account.phone}} <br>
         {{ user.account.join_date|date:"D d M Y" }}
       </p>
+        <a href="{% url "account:edit_profile" %}" class="btn btn-primary">ویرایش پروفایل</a>
     </div>
   </div>
 </div>
