--- a/general/templates/general/base.html
+++ b/general/templates/general/base.html
@@ -12,6 +12,9 @@
     <body>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <a class="navbar-brand" href="#">روستانیک</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
 
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <form class="form-inline my-2 my-lg-0 mr-auto">
@@ -20,34 +23,34 @@
                 </form>
 
                 <ul class="navbar-nav mr-auto">
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'product_list' %}">محصولات</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'home' %}">خانه</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'about-us' %}">درباره ما</a>
-                </li>
-                {% if user.is_authenticated %}
+                    {% if user.is_authenticated %}
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'account:edit_profile' %}">{{ user.username }} خوش آمدید</a>
+                        </li>
+                    {% else %}
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'account:login' %}">ورود</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'account:registration' %}">ثبت نام</a>
+                        </li>
+                    {% endif %}
                     <li class="nav-item">
-                        <a class="nav-link" href="#">{{ user.username }} خوش آمدید</a>
-                    </li>
-                {% else %}
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'account:login' %}">ورود</a>
+                        <a class="nav-link" href="{% url 'about-us' %}">درباره ما</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'account:registration' %}">ثبت نام</a>
+                        <a class="nav-link" href="{% url 'product_list' %}">محصولات</a>
                     </li>
-                {% endif %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'home' %}">خانه</a>
+                    </li>
                 </ul>
             </div>
         </nav>
         {% block content %}
         {% endblock %}
         <br><br>
-        <center><small>Copyright &copy; AMOO - All Rights Reserved</small></center>
+        <center><small>Copyright &copy; SAD-G7 - All Rights Reserved</small></center>
         <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
         <script src="https://cdn.rtlcss.com/bootstrap/v4.0.0/js/bootstrap.min.js" integrity="sha384-54+cucJ4QbVb99v8dcttx/0JRx4FHMmhOWi4W+xrXpKcsKQodCBwAvu3xxkZAwsH" crossorigin="anonymous"></script>
