--- a/general/templates/general/base.html
+++ b/general/templates/general/base.html
@@ -25,7 +25,7 @@
                 <ul class="navbar-nav mr-auto">
                     {% if user.is_authenticated %}
                         <li class="nav-item">
-                            <a class="nav-link" href="{% url 'account:edit_profile' %}">{{ user.username }} خوش آمدید</a>
+                            <a class="nav-link" href="{% url 'account:logout' %}">خروج</a>
                         </li>
                     {% else %}
                         <li class="nav-item">
@@ -44,6 +44,12 @@
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'home' %}">خانه</a>
                     </li>
+
+                    {% if user.is_authenticated %}
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'account:profile' %}">{{ user.username }} خوش آمدید</a>
+                        </li>
+                    {% endif %}
                 </ul>
             </div>
         </nav>
