--- a/general/templates/general/home.html
+++ b/general/templates/general/home.html
@@ -2,8 +2,9 @@
 {% load static %}
 
 {% block content %}
-
-        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+    <br>
+    <center>
+        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" style="width:70%">
       <ol class="carousel-indicators">
         <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
         <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
@@ -29,5 +30,6 @@
         <span class="sr-only">Next</span>
       </a>
     </div>
+    </center>
 
 {% endblock %}
