Fix some minor problem

--- a/product/templates/list.html
+++ b/product/templates/list.html
@@ -18,7 +18,7 @@
                         <td width="150px">
                             <a onclick="$('#Modal-{{ p.product_id }}').modal('toggle')"
                                class="btn btn-primary" data-toggle="modal"
-                               data-target="Modal-{{ p.product_id }}">اضافه کردن محصول</a>
+                               data-target="Modal-{{ p.product_id }}">+</a>
 
                             <div id='Modal-{{ p.product_id }}' class="modal" tabindex="-1"
                                  role="dialog">
