--- a/product/templates/product_page.html
+++ b/product/templates/product_page.html
@@ -43,7 +43,7 @@
                     قیمت:
                     {{ product.price }} <br>
                     انقضا:
-                    {{ product.expires_at|date:"D d M Y" }} <br>
+                    {{ product.expires_at }} <br>
                 </p>
                 <a id='myInput' onclick="$('#myModal').modal('toggle')"
                    class="btn btn-primary" data-toggle="modal"
