Add cart view page

--- a/product/templates/list.html
+++ b/product/templates/list.html
@@ -67,7 +67,7 @@
                         </td>
                         <td>
                             {% if p.is_available %}
-                                <span style="color: green"> {{ p.price }} ریال</span>
+                                <span style="color: green">T{{ p.price }}</span>
                             {% else %}
                                 <span style="color: red">موجود نیست</span>
                             {% endif %}
