--- a/product/templates/product_page.html
+++ b/product/templates/product_page.html
@@ -63,7 +63,7 @@
                 </div>
                 <div class="modal-body form-group">
                     <form method="post"
-                          action="{% url "purchase:add_item_to_cart" product.product_id %}"
+                          action="{% url "purchase:add_item_to_purchase" product.product_id %}"
                           dir="rtl">
                         {% csrf_token %}
                         <div class="form-group row">
