--- a/general/templates/general/base.html
+++ b/general/templates/general/base.html
@@ -27,6 +27,9 @@
                         <li class="nav-item">
                             <a class="nav-link" href="{% url 'account:logout' %}">خروج</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'purchase:show_purchase' %}">سبد خرید</a>
+                        </li>
                     {% else %}
                         <li class="nav-item">
                             <a class="nav-link" href="{% url 'account:login' %}">ورود</a>
