--- a/purchase/templates/purchase/purchase.html
+++ b/purchase/templates/purchase/purchase.html
@@ -1,13 +1,21 @@
 {% extends 'general/base.html' %}
 
 {% block content %}
+    {% if not items %}
+        <div style="width: 150px; margin: 20px auto auto;">
+            در سبد محصولی وجود ندارد
+        </div>
+    {% endif %}
     {% for item in items %}
         <div class="card" style="width: 30%; margin: 20px auto auto;">
             <div class="card-body">
                 <h5 class="card-title">{{ item.name }}</h5>
                 <a href="{% url 'purchase:edit_purchase_item' purchase_item_id=item.purchase_item_id %}">ویرایش</a>
                 &emsp; &emsp;
-                <span class="card-text" style="color: green;">T{{ item.fee }}</span>
+                <a href="{% url 'purchase:delete_purchase_item' purchase_item_id=item.purchase_item_id %}">حذف</a>
+                &emsp; &emsp;
+                <span class="card-text"
+                      style="color: green;">T{{ item.fee }}</span>
                 &emsp; &emsp;
                 <span class="card-text">kg {{ item.amount }}</span>
 
@@ -15,7 +23,7 @@
         </div>
     {% endfor %}
     <div style="width: 100px; margin: 20px auto auto;">
-        <button class="btn btn-primary" style="width: 100px;">کنسل</button>
+        <button class="btn btn-primary" style="width: 100px;">نهایی کردن</button>
     </div>
 
 {% endblock %}
