--- a/purchase/templates/purchase/edit_purchase_item.html
+++ b/purchase/templates/purchase/edit_purchase_item.html
@@ -1,13 +1,13 @@
 {% extends 'general/base.html' %}
 
 {% block content %}
-    <div class="card" style="width:300px; margin: 20px auto auto;">
+    <div style="width:300px; margin: 20px auto auto;">
         <form class="form-group" method="post" style="margin-left: 10px; margin-right: 20px; margin-top: 20px;"
               action="{% url 'purchase:edit_purchase_item' purchase_item_id=purchase_item.id %}">
             {% csrf_token %}
             {{ form.as_p }}
             <div style="width: 50px; margin: auto;">
-                <input type="submit" class="btn btn-primary" value="Send">
+                <input type="submit" class="btn btn-primary" value="ویرایش">
             </div>
         </form>
     </div>
