--- a/account/templates/account/change_password.html
+++ b/account/templates/account/change_password.html
@@ -8,7 +8,7 @@ git {% extends 'account/base.html' %}
         <form method="post">
             {% csrf_token %}
             {{ form.as_p }}
-            <button>Submit</button>
+            <button>ارسال</button>
         </form>
     </center>
 {% endblock %}
