--- a/account/templates/account/register.html
+++ b/account/templates/account/register.html
@@ -6,7 +6,7 @@
     <form method="post">
         {% csrf_token %}
         {{form.as_p}}
-        <input type="submit" value="signup">
+        <input type="submit" value="ثبت نام">
     </form>
 </div>
 {% endblock %}
