--- a/general/templates/general/home.html
+++ b/general/templates/general/home.html
@@ -2,6 +2,15 @@
 {% load static %}
 
 {% block content %}
+    {% if messages %}
+        <div>
+            {% for message in messages %}
+                <div class="alert {% if message.tags %} alert-{{ message.tags }} {% endif %}">
+                {{ message }}
+                </div>
+            {% endfor %}
+        </div>
+    {% endif %}
     <br>
     <center>
         <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" style="width:70%">
