--- a/purchase/templates/purchase/history.html
+++ b/purchase/templates/purchase/history.html
@@ -1,91 +1,110 @@
-{% extends "general/base.html" %}
+{% extends 'general/base.html' %}
 
 {% block content %}
-    <style xmlns:purchase="http://www.w3.org/1999/xhtml"
-           xmlns:purchase="http://www.w3.org/1999/xhtml"
-           xmlns:purchase="http://www.w3.org/1999/xhtml">
-        .container {
-            padding: 5%;
-        }
-
-        .container .img {
-            text-align: center;
-        }
-
-        .container .details {
-            border-left: 3px solid #ded4da;
-        }
-
-        .container .details p {
-            font-size: 15px;
-            font-weight: bold;
-        }
-
-        .modal-header {
-            direction: rtl;
-        }
-    </style>
-    <div class="container">
-        <div class="row">
-            <div class="col-md-6 img">
-                <img src="/media/{{ product.photo }}" height="300px"
-                     width="300px">
-
-            </div>
-            <div class="col-md-6 details">
-                <blockquote>
-                    <h5>{{ product.name }}</h5>
-                </blockquote>
-                <p style="direction: rtl">
-                    {% if product.is_available %}
-                        <span style="color: green">
-                        قیمت:
-                        {{ product.price }}</span>
-                    {% else %} <span style="color: red">ناموجود</span>
-                    {% endif %} <br>
-                    تولید:
-                    {{ product.manufacture_date }} <br>
-                    انقضا:
-                    {{ product.expires_at }} <br>
-                </p>
-                {% if product.is_available %}
-                <a id='myInput' onclick="$('#myModal').modal('toggle')"
-                   class="btn btn-primary" data-toggle="modal"
-                   data-target="myModal">اضافه کردن به سبد خرید</a>
-                {% endif %}
-            </div>
-        </div>
-    </div>
-    <div id='myModal' class="modal" tabindex="-1" role="dialog">
-        <div class="modal-dialog" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title">تعیین مقدار محصول موردنظر</h5>
-                    <button type="button" class="close" data-dismiss="modal"
-                            aria-label="Close">
-                        <span>&times;</span>
-                    </button>
+    {% if messages %}
+        <div>
+            {% for message in messages %}
+                <div class="alert {% if message.tags %} alert-{{ message.tags }} {% endif %}">
+                    {{ message }}
                 </div>
-                <div class="modal-body form-group">
-                    <form method="post"
-                          action="{% url "purchase:add_item_to_purchase" product.product_id %}"
-                          dir="rtl">
-                        {% csrf_token %}
-                        <div class="form-group row">
-                            <label class="col-form-label col-sm-2">مقدار:</label>
-                            <input value="{{ current }}" required
-                                   class="form-control col-sm-9" type="number"
-                                   name="amount"
-                                   placeholder="مقدار موردنظر را بر حسب کیلوگرم وارد کنید">
-                        </div>
-                        <br>
-                        <button class="btn btn-primary"> اضافه
-                            کن
-                        </button>
-                    </form>
-                </div>
-            </div>
+            {% endfor %}
         </div>
+    {% endif %}
+    <div class="row">
+        <main class="col-md-9 ml-sm-auto col-lg-10 px-4">
+            <table class="table">
+                <thead>
+                <tr>
+                    <th scope="col"></th>
+                    <th scope="col"></th>
+                    <th scope="col"></th>
+                    <th scope="col"></th>
+                    <th scope="col">محصولات</th>
+                </tr>
+                </thead>
+                <tbody>
+                {% for p in products %}
+                    <tr>
+                        <td width="150px">
+{#                            {% if p.is_available %}#}
+{#                            <a onclick="$('#Modal-{{ p.product_id }}').modal('toggle')"#}
+{#                               class="btn btn-primary" data-toggle="modal"#}
+{#                               data-target="Modal-{{ p.product_id }}">+</a>#}
+{##}
+{#                            <div id='Modal-{{ p.product_id }}' class="modal" tabindex="-1"#}
+{#                                 role="dialog">#}
+{#                                <div class="modal-dialog" role="document">#}
+{#                                    <div class="modal-content">#}
+{#                                        <div class="modal-header">#}
+{#                                            <h5 class="modal-title">تعیین مقدار#}
+{#                                                محصول موردنظر</h5>#}
+{#                                            <button type="button" class="close"#}
+{#                                                    data-dismiss="modal"#}
+{#                                                    aria-label="Close">#}
+{#                                                <span>&times;</span>#}
+{#                                            </button>#}
+{#                                        </div>#}
+{#                                        <div class="modal-body form-group">#}
+{#                                            <form method="post"#}
+{#                                                  action="{% url "purchase:add_item_to_purchase" p.product_id %}"#}
+{#                                                  dir="rtl">#}
+{#                                                {% csrf_token %}#}
+{#                                                <div class="form-group row">#}
+{#                                                    <label class="col-form-label col-sm-2">مقدار:</label>#}
+{#                                                    <input value="{{ current }}"#}
+{#                                                           required#}
+{#                                                           class="form-control col-sm-9"#}
+{#                                                           type="number"#}
+{#                                                           name="amount"#}
+{#                                                           placeholder="مقدار موردنظر را بر حسب کیلوگرم وارد کنید">#}
+{#                                                </div>#}
+{#                                                <br>#}
+{#                                                <button class="btn btn-primary">#}
+{#                                                    اضافه#}
+{#                                                    کن#}
+{#                                                </button>#}
+{#                                            </form>#}
+{#                                        </div>#}
+{#                                    </div>#}
+{#                                </div>#}
+{#                            </div>#}
+{#                            {% endif %}#}
+                        </td>
+                        <td><img src="/media/{{ p.photo }}" height="100px"
+                                 width="130px"></td>
+                        <td>
+                            {{ p.manufacture_date }}:تولید<br>
+                            {{ p.expires_at }}:انقضا
+
+                        </td>
+                        <td>
+                            {% if p.is_available %}
+                                <span style="color: green">T{{ p.price }}</span>
+                            {% else %}
+                                <span style="color: red">موجود نیست</span>
+                            {% endif %}
+                        </td>
+                        <td>
+                            <a href="/product/{{ p.product_id }}">{{ p.name }}</a>
+                        </td>
+                    </tr>
+                {% endfor %}
+                <tbody>
+            </table>
+        </main>
+        <nav class="col-md-2 d-none d-md-block bg-light sidebar">
+            <div class="sidebar-sticky">
+                <h6 class="sidebar-heading px-3 mt-4 mb-1 text-muted">انواع
+                    محصولات</h6>
+                <ul class="nav flex-column mb-2">
+                    {% for kind in kinds %}
+                        <li class="nav-item">
+                            <a class="nav-link"
+                               href="?kind={{ kind }}">{{ kind }}</a>
+                        </li>
+                    {% endfor %}
+                </ul>
+            </div>
+        </nav>
     </div>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 {% endblock %}
