--- a/general/templates/general/base.html
+++ b/general/templates/general/base.html
@@ -31,6 +31,9 @@
                             <a class="nav-link" href="{% url 'account:logout' %}">خروج</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link" href="{% url 'purchase:show_history' %}">تاریخچه خرید</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link" href="{% url 'purchase:show_purchase' %}">سبد خرید</a>
                         </li>
                     {% else %}
